--- a/Who is Alan Turing.html
+++ b/Who is Alan Turing.html
@@ -128,12 +128,12 @@
 
     <aside class="sidebar" id="siteSidebar">
         <nav>
-            <a href="Index.htm">Home</a>
-            <a href="What is AI and how it all started.htm">AI Definition</a>
-            <a class="active" href="Who is Alan Turing.htm">Who is Turing</a>
-            <a href="The significance of Turing to AI.htm">Significance</a>
-            <a href="is AI helpful.htm">Is AI Helpful?</a>
-            <a href="Sources.htm">Sources</a>
+    <a href="index.html">Home</a>
+    <a href="What is AI and how it all started.html">AI Definition</a>
+    <a class="active" href="Who is Alan Turing.html">Who is Turing</a>
+    <a href="The significance of Turing to AI.html">Significance</a>
+    <a href="is AI helpful.html">Is AI Helpful?</a>
+    <a href="Sources.html">Sources</a>
         </nav>
     </aside>
 
@@ -181,3 +181,4 @@
     </script>
 </body>
 </html>
+
