--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
 
     <aside class="sidebar" id="siteSidebar">
         <nav>
-            <a href="Historical.htm" class="active">Home</a>
-            <a href="What is AI and how it all started.htm">AI Definition</a>
-            <a href="Who is Alan Turing.htm">Who is Turing</a>
-            <a href="The significance of Turing to AI.htm">Significance</a>
-            <a href="is AI helpful.htm">Is AI Helpful?</a>
-            <a href="Sources.htm">Sources</a>
+            <a href="index.html" class="active">Home</a>
+            <a href="What is AI and how it all started.html">AI Definition</a>
+            <a href="Who is Alan Turing.html">Who is Turing</a>
+            <a href="The significance of Turing to AI.html">Significance</a>
+            <a href="is AI helpful.html">Is AI Helpful?</a>
+            <a href="Sources.html">Sources</a>
         </nav>
     </aside>
 
@@ -214,4 +214,5 @@
     </script>
 
 </body>
+
 </html>
