--- a/is AI helpful.html
+++ b/is AI helpful.html
@@ -133,12 +133,12 @@
 
     <aside class="sidebar" id="siteSidebar">
         <nav>
-            <a href="Index.htm">Home</a>
-            <a href="What is AI and how it all started.htm">AI Definition</a>
-            <a href="Who is Alan Turing.htm">Who is Turing</a>
-            <a href="The significance of Turing to AI.htm">Significance</a>
-            <a href="is AI helpful.htm" class="active">Is AI Helpful?</a>
-            <a href="Sources.htm">Sources</a>
+            <a href="index.html">Home</a>
+            <a href="What is AI and how it all started.html">AI Definition</a>
+            <a href="Who is Alan Turing.html">Who is Turing</a>
+            <a href="The significance of Turing to AI.html">Significance</a>
+            <a href="is AI helpful.html" class="active">Is AI Helpful?</a>
+            <a href="Sources.html">Sources</a>
         </nav>
     </aside>
 
@@ -182,4 +182,5 @@
     </script>
 
 </body>
+
 </html>
