--- a/What is AI and how it all started.html
+++ b/What is AI and how it all started.html
@@ -134,12 +134,12 @@
 
     <aside class="sidebar" id="siteSidebar">
         <nav>
-            <a href="Index.htm">Home</a>
-            <a class="active" href="What is AI and how it all started.htm">AI Definition</a>
-            <a href="Who is Alan Turing.htm">Who is Turing</a>
-            <a href="The significance of Turing to AI.htm">Significance</a>
-            <a href="is AI helpful.htm">Is AI Helpful?</a>
-            <a href="Sources.htm">Sources</a>
+            <a href="index.html">Home</a>
+            <a class="active" href="What is AI and how it all started.html">AI Definition</a>
+            <a href="Who is Alan Turing.html">Who is Turing</a>
+            <a href="The significance of Turing to AI.html">Significance</a>
+            <a href="is AI helpful.html">Is AI Helpful?</a>
+            <a href="Sources.html">Sources</a>
         </nav>
     </aside>
 
@@ -188,3 +188,4 @@
 
 </body>
 </html>
+
